src/objects/Constantes_ASD__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Auto_Seguro_Dinamico__c</fullName>
        <label>Auto Seguro Dinamico</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_Fronterizo__c</fullName>
        <label>Seguro Fronterizo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_Moto_Bancomer__c</fullName>
        <label>Seguro Moto Bancomer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_Nacionalizado__c</fullName>
        <label>Seguro Nacionalizado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Constantes ASD</label>
</CustomObject>